src/test/deca/context/invalid/obtained_res/declClassExtendsIntcont.res
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:40) - verify program: start
DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:43) - verify listClass: start
./src/test/deca/context/invalid/created/testPass1/declClassExtendsInt.deca:8:0: InvalidSuperclassDeclarationException: The superclass you declared is not a valid class.
